ecommerce-demo/k8s/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: REPLACE_ME_CART_IMAGE
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
          readinessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4002
            initialDelaySeconds: 10
            periodSeconds: 10
